...
      return <LoadingIndicator />;
    }

    return (
      <View style={sharedStyles.bodyPadding}>
        <TextInput
          testID="name-field"
          label="Category name"
          accessibilityLabel="Category name"
          value={name}
          onChangeText={setName}
          mode="outlined"
          multiline
...
              accessibilityLabel="Delete"
            >
              Delete
            </Button>
          )}
          <Button
            testID="save-button"
            mode="contained"
            icon="content-save"
            onPress={handleSave}
            style={responsiveStyles.button}
            disabled={isLoading}
            accessibilityLabel="Save"
...
